refactor: replace folder adjacency list with materialized path
